# todo-cli

./: LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: python.yml
tests/: test_basic.py
todo_cli/: main.py
