[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "todo-cli-kazuhito0811"
version = "0.1.0"
description = "Simple ToDo CLI built with Typer"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer[all]",
]

[project.scripts]
todo = "todo_cli.main:app"
